# BenchmarkAdapter

./: .gitignore  LICENSE  README.md  log.md  pyproject.toml  requirements.txt  run_pipeline.py  run_pipeline.sh
BenchmarkAdapter/: __init__.py  base.py  registry.py  runner.py
BenchmarkAdapter/adapters/: __init__.py  base.py
BenchmarkAdapter/agents/: __init__.py  protocols.py
BenchmarkAdapter/drivers/: __init__.py  protocols.py  registry.py
BenchmarkAdapter/runtimes/: __init__.py  base.py  protocols.py  registry.py
agent/: __init__.py  agent.py  echo.py
benchmark/: __init__.py  browsergym.py  local.py
benchmark/WebArena/: __init__.py  adapter.py  agent.py  observation.py
benchmark/WebArena/utils/: chat_api.py
benchmark/utils/: utils.py
methods/: __init__.py  echo.py
methods/reasoning_bank/: __init__.py  config.py  induce_memory.py  memory_management.py  method_main.py
methods/reasoning_bank/prompts/: __init__.py  autoeval_prompts.py  prompt.py
methods/reasoning_bank/utils/: clients.py  evaluate_trajectory.py  evaluator.py
run_configs/apis/: qwen3.5-flash.json
run_configs/methods/: reasoning_bank.json
run_configs/tasks/: webarena.json
